tests/ui/parse/unknown_feature.rx
//@ spec: RXS-0031
#![feature(telepathy)] //~ ERROR RX0011
fn f() {}
